--- a/todo-api/package.json
+++ b/todo-api/package.json
@@ -19,7 +19,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "apollo-server-express": "^3.6.7",
     "express": "^4.18.0",
+    "graphql": "^16.4.0",
     "mongoose": "^6.3.1"
   }
 }
